--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,213 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  object-fit: cover;
+}
+
+h1,
+h2,
+h3 {
+    font-weight: 500;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+h2 {
+  font-size: clamp(1.5rem, 2.5vw + 0.06rem, 2.5rem);
+}
+
+/* HEADER */
+header {
+  max-width: 1200px;
+  height: 100px;
+  margin: 1rem auto;
+  overflow: auto;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* NAV */
+nav {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1.5rem;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+nav a.active {
+  text-decoration: underline;
+}
+
+/* HEROBANNER */
+.herobanner {
+  position: relative;
+}
+
+.herobanner-text {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* max-width: 500px; */
+  color: black;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.803);
+  padding: 1rem;
+  border-radius: 20px;
+}
+
+@media screen and (max-width: 763px) {
+  .herobanner-text {
+    top: 70%;
+    padding: 0.5rem;
+  }
+}
+
+.herobanner-text:hover {
+  background-color: rgb(255, 255, 255);
+}
+
+/* CATALOGUE */
+.catalogue {
+  max-width: 1200px;
+  margin: 1rem auto;
+  overflow: auto;
+  padding: 1rem;
+  margin-bottom: 5rem;
+}
+
+.catalogue__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 3rem;
+  color: #716293;
+}
+
+.catalogue__produits {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 2.5rem;
+}
+
+.catalogue__produit button:nth-of-type(2) {
+  margin-left: 0.5rem;
+}
+
+/* BUTTON */
+.button {
+  display: inline-block;
+  color: #fff;
+  background-color: #DBA745;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:active {
+  transform: scale(0.98);
+}
+
+.button-block {
+  display: block;
+  width: 100%;
+}
+
+/* ADD FORM */
+.add-product {
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 1rem;
+  margin-bottom: 5rem;
+}
+
+.add-product__header {
+  margin-bottom: 3rem;
+  color: #DBA745;
+}
+
+.add-product__form {
+  max-width: 600px;
+  /* margin: auto; */
+}
+
+.form-control {
+  margin: 10px 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input, .form-control textarea {
+  width: 100%;
+  margin: 5px 0;
+  padding: 7px;
+  font-size: 17px;
+}
+
+.form-control-check {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-control-check label {
+  flex: 1;
+}
+
+.form-control-check input {
+  flex: 2;
+  height: 20px;
+}
+
+/* FOOTER */
+footer {
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #61281E;
+  color: white;
 }
