--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,6 @@ nav a.active {
   top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* max-width: 500px; */
   color: black;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.803);
@@ -101,32 +100,6 @@ nav a.active {
   background-color: rgb(255, 255, 255);
 }
 
-/* CATALOGUE */
-.catalogue {
-  max-width: 1200px;
-  margin: 1rem auto;
-  overflow: auto;
-  padding: 1rem;
-  margin-bottom: 5rem;
-}
-
-.catalogue__header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 3rem;
-  color: #716293;
-}
-
-.catalogue__produits {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  gap: 2.5rem;
-}
-
-.catalogue__produit button:nth-of-type(2) {
-  margin-left: 0.5rem;
-}
 
 /* BUTTON */
 .button {
@@ -153,25 +126,60 @@ nav a.active {
   width: 100%;
 }
 
-/* ADD FORM */
-.add-product {
+button:nth-of-type(2) {
+  margin-left: 0.5rem;
+}
+
+/* CATALOGUE */
+.catalogue {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 1rem auto;
   overflow: auto;
   padding: 1rem;
   margin-bottom: 5rem;
 }
 
-.add-product__header {
+.catalogue__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 3rem;
-  color: #DBA745;
+  color: #716293;
 }
 
-.add-product__form {
-  max-width: 600px;
-  /* margin: auto; */
+.catalogue__produits {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 2.5rem;
 }
 
+/* PRODUIT */
+
+
+/* MODAL */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+  max-width: 50%;
+  width: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+/* FORM */
 .form-control {
   margin: 10px 0;
 }
