--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@
   box-sizing: border-box;
 }
 
+/* variable color */
+:root {
+  --color-red: #8E3829;
+  --color-yellow: #DBA745;
+  --color-purple: #9A8FA9;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -18,6 +25,9 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+main {
+  min-height: calc(100vh - 180px - 2rem);
+}
 a {
   text-decoration: none;
   color: inherit;
@@ -25,7 +35,7 @@ a {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -36,20 +46,20 @@ h3 {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 h2 {
-  font-size: clamp(1.5rem, 2.5vw + 0.06rem, 2.5rem);
+  font-size: 1.5rem;
 }
 
 /* HEADER */
 header {
   max-width: 1200px;
-  height: 100px;
+  height: 80px;
   margin: 1rem auto;
   overflow: auto;
-  padding: 1rem;
+  padding: 0 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -72,12 +82,19 @@ nav a.active {
   text-decoration: underline;
 }
 
-/* HEROBANNER */
-.herobanner {
+/* HOME */
+.home__herobanner {
   position: relative;
+  height: 100%;
 }
 
-.herobanner-text {
+.home__herobanner img {
+  object-fit: cover;
+  object-position: top;
+}
+
+.home__herobanner-text {
+  font-size: calc(1vw + 1rem);
   position: absolute;
   top: 80%;
   left: 50%;
@@ -90,14 +107,23 @@ nav a.active {
 }
 
 @media screen and (max-width: 763px) {
-  .herobanner-text {
+  .home__herobanner-text {
     top: 70%;
     padding: 0.5rem;
   }
 }
 
-.herobanner-text:hover {
-  background-color: rgb(255, 255, 255);
+.home__herobanner-text:hover {
+  color: var(--color-red);
+}
+
+.home__about {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 1200px;
+  margin: 2rem auto;
+  padding: 1rem;
 }
 
 
@@ -105,7 +131,7 @@ nav a.active {
 .button {
   display: inline-block;
   color: #fff;
-  background-color: #DBA745;
+  background-color: var(--color-yellow);
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
@@ -137,6 +163,7 @@ button:nth-of-type(2) {
   overflow: auto;
   padding: 1rem;
   margin-bottom: 5rem;
+  border-top: 1px solid var(--color-purple);
 }
 
 .catalogue__header {
@@ -144,17 +171,21 @@ button:nth-of-type(2) {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 3rem;
-  color: #716293;
+  color: var(--color-purple);
 }
 
 .catalogue__produits {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  gap: 2.5rem;
+  gap: 3rem;
 }
 
 /* PRODUIT */
-
+.catalogue__produit {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
 
 /* MODAL */
 .modal {
@@ -216,6 +247,6 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #61281E;
+  background-color: var(--color-yellow);
   color: white;
 }
